--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -101,3 +101,22 @@ html,body{
   border: 1px solid #dadada;
   border-radius: 5px;
 }
+
+.folderform{
+  display: none;
+  width: 100%;
+}
+
+.folderform form{
+  width: 100%;
+}
+
+.folderform form input{
+  width: 70%;
+  outline-color: royalblue;
+  padding: 10px 12px;
+  font-size: 16px;
+  font-weight: 600;
+  border: 1px solid #dadada;
+  border-radius: 5px;
+}
