--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -51,6 +51,12 @@ html,body{
   justify-content: space-between;
 }
 
+.file a{
+  color: #000;
+  text-decoration: none;
+  font-weight: 800;
+}
+
 .file:hover{
   background-color: #ebebeb;
 }
@@ -69,9 +75,6 @@ html,body{
 }
 
 #right{
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 75%;
   height: 100%;
   background-color: #FFF;
@@ -119,4 +122,41 @@ html,body{
   font-weight: 600;
   border: 1px solid #dadada;
   border-radius: 5px;
+}
+
+#rheader{
+  width: 100%;
+}
+
+#rheader .opened{
+  font-weight: 600;
+  width: fit-content;
+  padding: 20px 30px;
+  background-color: #dadada;
+}
+
+.opened i{
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+#right h3{
+  padding: 20px;
+}
+
+#content{
+  width: 100%;
+  height: 90%;
+}
+
+#content textarea{
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  padding: 20px;
+  font-weight: 600;
+  font-size: 26px;
+  font-family: consolas;
 }
