--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,15 @@
   <link rel="stylesheet" href="../stylesheets/style.css">
 </head>
 <body>
+  <div id="overlay">
+    <div id="popup">
+      <h3>Rename</h3>
+      <form action="/change">
+        <input id="changeinp" type="text" name="filename">
+        <input type="submit" value="Change">
+      </form>
+    </div>
+  </div>
     <div id="main">
       <div id="left">
         <div id="folder">
@@ -43,11 +52,11 @@
                   <%= elem.name %>
               </a>
               <div class="ficons">
-                <i class="ri-pencil-line"></i>
+                <i id="edit" data-val="<%= elem.name %>" class="ri-pencil-line"></i>
                 <% if(elem.isDirectory()){ %>
                   <a href="/folder/delete/<%= elem.name %>"><i class="ri-delete-bin-5-line"></i></a>
-                  <% } else { %>
-                  <a href="/file/delete/<%= elem.name %>"><i class="ri-delete-bin-5-line"></i></a>
+                <% } else { %>
+                    <a href="/file/delete/<%= elem.name %>"><i class="ri-delete-bin-5-line"></i></a>
                 <% } %>
               </div>
             </div>
@@ -60,6 +69,12 @@
     </div>
 
     <script>
+
+      document.querySelector("#edit")
+      .addEventListener("click", function(){
+        document.querySelector("#overlay").style.display = "initial";
+        document.querySelector("#changeinp").value = this.dataset.val;
+      });
 
       function donoOffKaro(){
         document.querySelectorAll(".form")
